--- a/error.html
+++ b/error.html
@@ -11,6 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-Array(    [action] => 0    [user] => admin    [pass] => admin123456)<br /><font size='1'><table class='xdebug-error xe-fatal-error' dir='ltr' border='1' cellspacing='0' cellpadding='1'><tr><th align='left' bgcolor='#f57900' colspan="5"><span style='background-color: #cc0000; color: #fce94f; font-size: x-large;'>( ! )</span> Fatal error: Call to undefined function try_login() in C:\wamp\www\myactivity\function\service.php on line <i>14</i></th></tr><tr><th align='left' bgcolor='#e9b96e' colspan='5'>Call Stack</th></tr><tr><th align='center' bgcolor='#eeeeec'>#</th><th align='left' bgcolor='#eeeeec'>Time</th><th align='left' bgcolor='#eeeeec'>Memory</th><th align='left' bgcolor='#eeeeec'>Function</th><th align='left' bgcolor='#eeeeec'>Location</th></tr><tr><td bgcolor='#eeeeec' align='center'>1</td><td bgcolor='#eeeeec' align='center'>0.0005</td><td bgcolor='#eeeeec' align='right'>273992</td><td bgcolor='#eeeeec'>{main}(  )</td><td title='C:\wamp\www\myactivity\function\service.php' bgcolor='#eeeeec'>..\service.php<b>:</b>0</td></tr></table></font>
+<pre>Array(    [0] => 1    [1] => mysqli_result Object        (            [current_field] => 0            [field_count] => 1            [lengths] =>             [num_rows] => 1            [type] => 0        ))</pre>{"r":0,"d":"No se pudo modificar la contrase\u00f1a. No se pudo modificar la contrase\u00f1a."}
     </body>
 </html>
